--- a/templates/base.html
+++ b/templates/base.html
@@ -29,23 +29,11 @@
         <!-- Masthead-->
 
         {% block header %}
-        <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h1 class="mb-5">
+        
                             {% block texto_header %}
                             
                             {% endblock texto_header %}
-                            </h1>
-                         
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
+              
         {% endblock header %}
 
         {% block despues_del_header %}{% endblock despues_del_header %}
@@ -59,22 +47,18 @@
                         <ul class="list-inline mb-2">
                             <li class="list-inline-item"><a href={% url 'about' %}>About</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
+                            <li class="list-inline-item"><a href="https://www.twitter.com/niconievadumas/" target='_blanck'>Contact</a></li>
                         </ul>
                         <p class="text-muted small mb-4 mb-lg-0">&copy; Website NND - CoderHourse 2022. All Rights Reserved.</p>
                     </div>
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
+                                <a href="https://www.facebook.com/niconievadumas/" target='_blanck'><i class="bi-facebook fs-3"></i></a>
                             </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
-                            </li>
+                    
                             <li class="list-inline-item">
-                                <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://www.instagram.com/niconievadumas/" target='_blanck'><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
                     </div>
