--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block title %}
 <title>Registro</title>
 {% endblock title %}
@@ -13,10 +12,8 @@
 <p>
     <form action={% url 'registro' %} method="post">
         {% csrf_token %}
-    
-        
         <table>{{form}}</table>
-        <button>Crear</button>
+        <button>Registrar</button>
     </form>
 </p>
 {% endblock despues_del_header %}
